# tmp

hope/: pyproject.toml
hope/hope/: main.py
hope/hope/dataset/: .hdf5  analyze_images.py  check_num_patient.py  createdataset.py  datacontainer.py  distribute_files.py  imagecontainer.py  imagegenerator.py  splitdata.py
hope/hope/loss/: comboloss.py  dicebceloss.py  focaltverskyloss.py  haussdorff_dt_loss.py  hybridloss.py  tversky_bce_loss.py  tverskyloss.py
hope/hope/metrics/: calculate_metrics.py  haussdorff_metric.py  metrics.py
hope/hope/model/: attention_unet.py  dropout_unet.py  initiate_model.py  mini_unet.py  mish_unet.py  nested_unet.py  test.py  unet.py
hope/hope/preprocess/: preprocess.py  preprocess_pipeline.py
hope/hope/preprocess/utils/: normalize.py
hope/hope/result/: metrics.csv  validation_metrics.csv
hope/hope/train/: estimate_lr.py  grid_search.py  imageloader.py  modelperformance.py  modelutils.py  predict.py  train.py  train_test.py
hope/hope/train/testloader/: artifical_dataset_loader.py
hope/hope/utils/: adaptive_hist_equalizer.py  add_channel.py  check_axis.py  clean_mask.py  equalize_dimension.py  fetchpath.py  imagestatistics.py  min_max_normalization.py  modelperformance.py  move_files.py  normalization.py  numpy_check_axis.py  remove_zeros.py  slice_and_concat.py  split_train_validation.py  stats.py  swap_brain_plane.py  z_normalization.py
hope/tests/: test_createdataset.py
