[tool.poetry]
name = "hope"
version = "0.1.0"
description = "A semantic segmentation of MS using DL and image processessing/analysis"
authors = ["einrone <arams96@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.3"
torch = "^1.9.1"
torchvision = "^0.10.1"
torchaudio = "^0.9.1"
numpy = "^1.21.1"
nibabel = "^3.2.1"
py3nvml = "^0.2.6"
matplotlib = "^3.5.1"
h5py = "^3.6.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
